--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "@hydrophobefireman/lazy",
-  "description": "",
-  "types": "dist/src/index.d.ts",
-  "version": "0.0.3-11-11-2021-22-18",
-  "license": "MIT",
-  "type": "module",
-  "homepage": "https://github.com/@hydrophobefireman/module-name#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/@hydrophobefireman/module-name.git"
-  },
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
-  "exports": {
-    ".": "./dist/src/index.js",
-    "./package.json": "./package.json",
-    "./collectors": "./collectors/src/index.js",
-    "./range": "./range/src/index.js"
-  },
-  "scripts": {
-    "prebuild": "node scripts/clean.cjs",
-    "prepublishOnly": "npm run build &&  node scripts/prepublishOnly.cjs",
-    "postpublish": "node scripts/postpublish.cjs",
-    "postbuild": "node scripts/postbuild.cjs",
-    "create-package": "node scripts/create-package.cjs",
-    "build": "tsc",
-    "prepare": "husky install"
-  },
-  "sideEffects": false,
-  "dependencies": {},
-  "devDependencies": {
-    "@types/node": "^18.8.1",
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
-    "typescript": "^4.8.4"
-  },
-  "libBase": {
-    "exports": {
+   "name": "@hydrophobefireman/lazy",
+   "description": "",
+   "types": "dist/src/index.d.ts",
+   "version": "0.0.3-11-11-2021-22-18",
+   "license": "MIT",
+   "type": "module",
+   "homepage": "https://github.com/@hydrophobefireman/module-name#readme",
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/@hydrophobefireman/module-name.git"
+   },
+   "main": "dist/src/index.js",
+   "module": "dist/src/index.js",
+   "exports": {
       ".": "./dist/src/index.js",
-      "./package.json": "./package.json"
-    }
-  },
-  "libPackages": [
-    "collectors",
-    "range"
-  ]
+      "./package.json": "./package.json",
+      "./collectors": "./collectors/src/index.js",
+      "./double-ended": "./double-ended/src/index.js",
+      "./range": "./range/src/index.js"
+   },
+   "scripts": {
+      "prebuild": "node scripts/clean.cjs",
+      "prepublishOnly": "npm run build &&  node scripts/prepublishOnly.cjs",
+      "postpublish": "node scripts/postpublish.cjs",
+      "postbuild": "node scripts/postbuild.cjs",
+      "create-package": "node scripts/create-package.cjs",
+      "build": "tsc",
+      "prepare": "husky install"
+   },
+   "sideEffects": false,
+   "dependencies": {},
+   "devDependencies": {
+      "@types/node": "^18.8.1",
+      "husky": "^8.0.1",
+      "prettier": "^2.7.1",
+      "pretty-quick": "^3.1.3",
+      "typescript": "^4.8.4"
+   },
+   "libBase": {
+      "exports": {
+         ".": "./dist/src/index.js",
+         "./package.json": "./package.json"
+      }
+   },
+   "libPackages": [
+      "collectors",
+      "double-ended",
+      "range"
+   ]
 }
